--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,15 @@ body {
   color: #4d5ae5;
 }
 
+.mobile-address-list-link-number{
+  font-weight: 500;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
+}
+
 .mobile-menu-links-list {
   display: flex;
   justify-content: space-between;
